--- a/logging_config.json
+++ b/logging_config.json
@@ -21,6 +21,14 @@
     }
   },
   "handlers": {
+    "stdout":
+    {
+      "class": "logging.StreamHandler",
+      "level": "DEBUG",
+      "formatter": "simple",
+      "filters":["non_error"],
+      "stream": "ext://sys.stdout"
+    },
     "stderr": {
       "class": "logging.StreamHandler",
       "level": "WARNING",
@@ -28,12 +36,18 @@
       "stream": "ext://sys.stderr"
     },
     "file": {
-      "class": "logging.handlers.RotatingFileHandler",
+      "class": "concurrent_log_handler.ConcurrentRotatingFileHandler",
       "level": "DEBUG",
       "formatter": "json",
       "filename": "logs/logger.log.jsonl",
       "maxBytes": 100000000,
-      "backupCount": 3
+      "backupCount": 3, 
+      "encoding": "utf-8"
+    }
+  },
+  "filters": {
+    "non_error": {
+      "()": "gdacs_flood_db.logger.NonErrorFilter"
     }
   },
   "loggers": {
