--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ dependencies = [
     "geopandas>=1.1.2",
     "numpy>=2.4.0",
     "pandas>=2.3.3",
+    "pycountry>=24.6.1",
+    "pycountry-convert>=0.7.2",
+    "pyogrio>=0.12.1",
     "requests>=2.32.5",
+    "shapely>=2.1.2",
 ]
 
 [dependency-groups]
